# polars_units

./: README.md  pyproject.toml
polars_units/: __init__.py  uexpr.py
polars_units.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_custom_registry.py  test_uexpr.py  test_uexpr_computational.py  test_uexpr_dataframe.py
